--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,17 @@
+html,
+body {
+  margin: 0;
+  padding: 0;
+}
+
+.background {
+  position: absolute;
+  display: block;
+  top: 0;
+  left: 0;
+  z-index: 0;
+}
+
 .App {
   text-align: center;
 }
